RESOLVED FIXED135913
Fix a memory leak in TypeSet
https://bugs.webkit.org/show_bug.cgi?id=135913
Summary Fix a memory leak in TypeSet
Saam Barati
Reported 2014-08-13 16:18:17 PDT
There is currently a memory leak with the member variable: m_structureHistory. Fix it.
Attachments
patch (6.25 KB, patch)
2014-08-20 10:57 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2014-08-20 10:57:48 PDT
Created attachment 236882 [details] patch Fixes the memory leak.
WebKit Commit Bot
Comment 2 2014-08-20 12:28:02 PDT
Comment on attachment 236882 [details] patch Clearing flags on attachment: 236882 Committed r172804: <http://trac.webkit.org/changeset/172804>
WebKit Commit Bot
Comment 3 2014-08-20 12:28:04 PDT
All reviewed patches have been landed. Closing bug.
Geoffrey Garen
Comment 4 2014-08-20 13:46:56 PDT
Comment on attachment 236882 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=236882&action=review > Source/JavaScriptCore/runtime/TypeSet.cpp:120 > + RefPtr<StructureShape> shape = m_structureHistory.at(i); Can you use bracket access instead of .at() in all this code?
Note You need to log in before you can comment on or make changes to this bug.