Fix a memory leak in TypeSet https://bugs.webkit.org/show_bug.cgi?id=135913

Patch by Saam Barati <sbarati@apple.com> on 2014-08-20
Reviewed by Filip Pizlo.

Currently, TypeSet unconditionally allocates memory for its member
variable m_structureHistory, but never deallocates it. Change this
from being a pointer that is unconditionally allocated to a member
variable that will be deallocated when TypeSet itself is deallocated.

* runtime/TypeSet.cpp:
(JSC::TypeSet::TypeSet):
(JSC::TypeSet::addTypeInformation):
(JSC::TypeSet::seenTypes):
(JSC::TypeSet::displayName):
(JSC::TypeSet::allStructureRepresentations):
(JSC::StructureShape::leastCommonAncestor):
* runtime/TypeSet.h:

Canonical link: https://commits.webkit.org/153946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@172804 268f45cc-cd09-0410-ab3c-d52691b4dbfc